--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,42 @@
+# Web Framework
 Flask==2.3.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
-email_validator==2.1.0
 gunicorn==21.2.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.3
-SQLAlchemy==2.0.24
-Werkzeug==2.3.7
-python-dotenv==1.0.0
 
-# These are optional depending on your production database
-# psycopg2-binary==2.9.9  # For PostgreSQL
-# mysqlclient==2.1.1      # For MySQL 
+# Database
+SQLAlchemy==2.0.24
+psycopg2-binary==2.9.9  # For PostgreSQL
+mysqlclient==2.1.1      # For MySQL
+
+# Security
+itsdangerous==2.1.2
+MarkupSafe==2.1.3
+python-dotenv==1.0.0
+email_validator==2.1.0
+
+# HTTP and API
+requests==2.31.0
+aiohttp==3.9.1
+websockets==12.0
+
+# Cryptocurrency
+web3==6.11.1
+eth-account==0.9.0
+eth-typing==3.5.1
+eth-utils==2.3.1
+bitcoin==1.1.42
+python-tron==0.1.0
+solana==0.30.2
+
+# Utilities
+Jinja2==3.1.3
+Werkzeug==2.3.7
+python-dateutil==2.8.2
+pytz==2023.3
+cryptography==41.0.5
+pyOpenSSL==23.3.0
+
+# Testing
+pytest==7.4.3
+pytest-cov==4.1.0 
