--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ eth-account==0.9.0
 eth-typing==3.5.1
 eth-utils==2.3.1
 bitcoin==1.1.42
-python-tron==0.1.0
+tronpy==0.2.7  # Альтернатива python-tron
 solana==0.30.2
 
 # Utilities
