--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ gunicorn==21.2.0
 
 # Database
 SQLAlchemy==2.0.24
-psycopg2-binary==2.9.9  # For PostgreSQL
-mysqlclient==2.1.1      # For MySQL
+psycopg2-binary==2.9.9
+mysqlclient==2.1.1
 
 # Security
 itsdangerous==2.1.2
@@ -26,7 +26,7 @@ eth-account==0.9.0
 eth-typing==3.5.1
 eth-utils==2.3.1
 bitcoin==1.1.42
-tronpy==0.2.7  # Альтернатива python-tron
+tronpy==0.5.0  # Обновлено до последней стабильной версии
 solana==0.30.2
 
 # Utilities
@@ -39,4 +39,4 @@ pyOpenSSL==23.3.0
 
 # Testing
 pytest==7.4.3
-pytest-cov==4.1.0 
+pytest-cov==4.1.0
