--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ email_validator==2.1.0
 # HTTP and API
 requests==2.31.0
 aiohttp==3.9.1
-websockets==12.0
+websockets==11.0.3
 
 # Cryptocurrency
 web3==6.11.1
@@ -26,7 +26,7 @@ eth-account==0.9.0
 eth-typing==3.5.1
 eth-utils==2.3.1
 bitcoin==1.1.42
-tronpy==0.5.0  # Обновлено до последней стабильной версии
+tronpy==0.5.0
 solana==0.30.2
 
 # Utilities
